frontend/niceice/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: niceice-web
spec:
  selector:
    matchLabels:
      app: niceice-web
  replicas: 1 
  template:
    metadata:
      labels:
        app: niceice-web
    spec:
      containers:
      - name: niceice-web
        image: registry.cn-shanghai.aliyuncs.com/niceice/niceice-web
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        - containerPort: 443
      imagePullSecrets:
      - name: aliyun-credentials-sh
