frontend/niceice/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: niceice-web
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: niceice-web
  sessionAffinity: None
  type: NodePort
